# eurotek

./: README.md  dockerfile  main.py  microsoftsansserif.cw127.pkl  microsoftsansserif.pkl  output.docx  pyproject.toml  template.docx
