[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "qwe",email = "yaroslav.tlugachev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docxtpl (>=0.20.0,<0.21.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "fpdf (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
